complete demo scroll

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Demo Scrolling</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <section>
+        <h2>Prime Recommended Movies</h2>
+        <div class="horizontal-content">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div> 
+        </div>
+        <div class="parallax-image">
+            <h3>Featured Images</h3>
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet natus debitis, molestiae optio numquam in, saepe repudiandae veritatis corrupti sunt similique est modi. Quibusdam illum illo dicta id facilis beatae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorem veniam maiores voluptatum corporis atque ea, quis, adipisci ex labore ullam, eveniet deleniti! Ullam dolore obcaecati quas at vitae? Dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nulla qui ad! Quo voluptatem, tenetur facere esse fuga perspiciatis aperiam enim ullam qui optio ab voluptates cupiditate non, reiciendis autem?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quod corrupti ut cum reiciendis nihil aperiam a beatae et est adipisci aliquid sequi numquam fuga, excepturi saepe praesentium explicabo repudiandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sapiente magnam, tenetur sunt, aliquam excepturi corporis illo laudantium dolore culpa eius animi praesentium repudiandae, odio veniam quisquam. Nam, ab repudiandae!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates quasi porro, odit nisi aliquid sequi debitis! Impedit maxime officia sit error suscipit quas esse possimus ullam! Officia, sapiente. Quia, reiciendis!</p>
+    </section>
 
+</body>
+</html>
